--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,83 @@
-/* @import url('https://fonts.googleapis.com/css?family=Slabo+27px'); */
 body {
-/* 	margin: 0 auto;
-	width: 90%;
-	max-width: 960px;
-	font-family: 'Slabo 27px', serif;
-	background-color: #F4F5FF;
-	color: #2C2C34;
-	margin-bottom: 10px; */
-	
-	background-color: #E8E5E5;
-    	color: black;
-    	font-family: monospace;
-    	font-size: 30px;
+    background-color: antiquewhite;
+    color: black;
+    font-family: georgia;
+    font-size: 30px;
+}
+
+.container {
+    margin:0 auto;
+    width: 80%;
+    max-width: 1300px;
+}
+
+.pics {
+	display: block;
+	list-style: none;
+	padding-left: 20%;
+}
+
+p {
+	margin-top: 100px;
 }
 
 h1 {
-/* 	text-align: center;
-	font-size: 300%;
-	color: #274060;
-	text-decoration: underline; */
-
 	font-size: 50px;
 	color: white;
 	background-color: #4286f4;
 }
 
-h2 { 
-	font-style : italic;
-	font-weight : normal;
-	margin-bottom : 0px;
-	color: #274060;
+.list {
+	background-color: black;
+	color: white;
+	list-style: none;
+	padding-top: 100px;
+	padding-bottom: 96px;
 }
 
-.studentProfile figure{ clear:right; }
-
-figure{
-	float: right;
+.list2 {
+	text-decoration: none;
+	list-style: none;
+	font-size: 15px;
+}
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
-p { 
-	line-height: 1.2em; 
-	font-size: 150%;
+.menu li {
+    float: left;
 }
 
-ul {
-	list-style-type: none;
-	padding-left: 0px;
+.menu li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-a {color: #5092C9;}
+.menu .is-current { 
+    background-color: #B4DCF5;
+    color: #204861;
+    }
 
-a:hover {color: #B18FCF;
-	padding: 5px;}
+
+footer {
+	text-align: center;
+	border-top-style: solid;
+	border-top-color: black;
+	border-top-width: 1px;
+	clear: left;
+}
+
+img {
+    float: left;
+    padding-bottom: 30px;
+    padding-right: 50px;
+    padding-top: 30px;
+}
+
